# IncidentForge

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  scenario_request.yml
docs/: app.js  architecture.md  design-system.md  index.html  scenario-format.md  styles.css
docs/ci/: github-actions-ci.yml
docs/data/: scenarios.json
examples/: README.md
examples/demo/: opensre_alert.json  report.html  score.json  score.md
examples/demo/bundle/: alert.json  candidate_rca.md  ground_truth.json  ground_truth.yaml  logs.jsonl  manifest.json  metrics.csv  runbook.md  traces.json
incidentforge/: __init__.py  __main__.py  cli.py  exporters.py  generator.py  models.py  render.py  scenarios.py  scoring.py  storage.py
scripts/: export_browser_demo.py
tests/: test_cli.py  test_generator.py  test_render.py  test_scoring.py
