[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "incidentforge"
version = "0.1.0"
description = "Synthetic production incidents and RCA evaluation for AI SRE agents."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Mohamad Kanso" }]
keywords = [
  "ai-sre",
  "observability",
  "incident-response",
  "root-cause-analysis",
  "synthetic-data",
  "evaluation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/MohamadKanso/IncidentForge"
Repository = "https://github.com/MohamadKanso/IncidentForge"
Issues = "https://github.com/MohamadKanso/IncidentForge/issues"

[project.scripts]
incidentforge = "incidentforge.cli:main"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
include = ["incidentforge*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
